# snn-for-mcu

./: .gitignore  CMakeLists.txt  EXPERIMENTS.md  README.md  main.cpp  pyproject.toml  txt
ImageClassification/: .gitignore  .project  CMakeLists.txt
ImageClassification/Core/Inc/: decode.h  jdata_conf.h  sd_diskio.h  snn.h  snn_conv_pool_lif_s16.h  snn_lif_s16.h  snn_model_data.h  snn_weights.h  snn_weights_fused.h  tf_functions.h
ImageClassification/Core/Src/: decode.c  jdata_conf.c  main.cc  snn.c  snn_conv_pool_lif_s16.c  snn_encode.c  snn_lif_s16.c  snn_model_data.cc  snn_tflm.cc  snn_weights.c  snn_weights_fused.c  stm32f7xx_it.c
ImageClassification/cmake/: arm-none-eabi.cmake
ImageClassification/tensorflow-lite/tensorflow/lite/micro/: micro_mutable_op_resolver.h
ImageClassification/tensorflow-lite/tensorflow/lite/micro/kernels/: micro_ops.h
ImageClassification/tools/: gen_fused_weights.c  gen_tflite_model.cc
experiments/: eval_results.json  export_testset.py  make_figures.py  results.json  run_eval.py
experiments/host_tests/: build_and_run_all.sh  eval_testset.c  test_encode.c  test_fused.c  test_lif.c  test_mapping.c  test_tflm.cc
experiments/host_tests/simd_mock/: arm_nnsupportfunctions.h  cmsis_compiler.h
experiments/v2_unfused/: gen_tflite_model_unfused.cc  snn_tflm_unfused.cc
include/: snn.h  snn_weights.h
mcu/: .cproject  .gitignore  .mxproject  ImageClassification.ioc  ImageClassification.launch
mcu/Core/Inc/: ffconf.h  main.h  snn.h  snn_weights.h  stm32f7xx_it.h
mcu/Core/Src/: main.cc  sd_diskio.c  snn.c  stm32f7xx_hal_msp.c
mcu/Drivers/STM32F7xx_HAL_Driver/Src/: stm32f7xx_hal_tim.c
paper_ieie/: 01_Introduction.tex  02_1_StrongArm.tex  02_Background.tex  03_Compiler.tex  03_Implementation.tex  04_Conclusion.tex  04_Fusion.tex  05_Evaluation.tex  06_Envelope.tex  07_Conclusion.tex  Abstract.tex  main.tex  references.bib  review_log.md
resources/: acc44_snn_cifar10.pth  acc50_snn_cifar10.pth
scripts/: 00_qat.py  00_train_model.py  01_image_export.py  01_qat_model_compiler.py  02_encoding_snn.py  03_20251123_final_qat_modelcompiler.py  03_trained_model_time_compare.py  05_numpy_mode.py  06_generate_c_code.py  07_analysis.py  chacha_py.py  main.py  model_compiler.py  snn_weights.c
scripts/experiments/: 00_train_model.py  01_image_export.py  04_kl_encoding_test.py  05_numpy_mode.py  06_generate_c_code.py  main.py  model_compiler.py
src/: snn.c  snn.cpp  snn_weights.c
