[project]
name = "snn-for-mcu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "brevitas>=0.10.2",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "nir>=1.0.7",
    "nirtorch>=2.0.5",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "snntorch>=0.9.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
